# nonebot_plugin_smart_message_storage

./: README.md  pyproject.toml
nonebot_plugin_smart_message_storage/: __init__.py  config.py  constants.py  db.py  models.py  prompt.py  vision.py
nonebot_plugin_smart_message_storage/handlers/: __init__.py  notices.py  recognize.py  search.py  store.py
nonebot_plugin_smart_message_storage/services/: __init__.py  contacts.py  context.py  image_tasks.py  images.py  message_utils.py  pending.py
teaching/: 00_仓库能力与边界.md  01_Windows环境与依赖安装.md  02_NoneBot项目创建与插件配置.md  03_QQ小号与NapCat_OneBot接入.md  04_OpenAI_API与图片识别.md  05_任务驱动_导出一个群聊和一个私聊好友.md  06_故障排查.md  07_日常启动与使用手册.md  08_AI女友功能可行性与方案.md  09_AI伴侣配置与群聊触发.md  10_重启电脑后如何复活AI伴侣.md
tests/: test_ai_integration.py  test_assets.py  test_message_utils.py  test_pending_update.py  test_vision_json.py
