[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "nonebot-plugin-smart-message-storage"
version = "1.1.0"
description = "支持群聊/私聊消息归档、检索和 AI 图片理解总结的 NoneBot2 插件。"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "WhyPilotXia" },
]
keywords = [
    "nonebot",
    "nonebot2",
    "onebot",
    "smart-message-storage",
    "message-storage",
    "qq",
    "ai-vision",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.3.0",
    "nonebot-plugin-localstore>=0.7.0",
    "SQLAlchemy>=2.0.0",
    "httpx>=0.24.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "twine>=5.0.0",
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/WhyPilotXia/nonebot_plugin_smart_message_storage"
Repository = "https://github.com/WhyPilotXia/nonebot_plugin_smart_message_storage"
Issues = "https://github.com/WhyPilotXia/nonebot_plugin_smart_message_storage/issues"

[project.entry-points."nonebot.plugins"]
nonebot_plugin_smart_message_storage = "nonebot_plugin_smart_message_storage"

[tool.hatch.build]
include = [
    "/nonebot_plugin_smart_message_storage",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_smart_message_storage"]

[tool.pytest.ini_options]
addopts = "-p no:nonebug"
markers = [
    "integration: tests that call the external AI vision API",
]
testpaths = ["tests"]
